<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_color">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/ivImagePoster"
        android:layout_width="95dp"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toTopOf="parent"
        app:roundedCornerRadius="16dp" />

    <TextView
        android:id="@+id/tvMovieName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/ivImagePoster"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMovieTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="3dp"
        android:text="@string/avangers_end_game"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/ivImagePoster"
        app:layout_constraintTop_toBottomOf="@id/tvMovieName" />

    <TextView
        android:id="@+id/tvRelease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/release_date"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/ivImagePoster"
        app:layout_constraintTop_toBottomOf="@id/tvMovieTitle" />

    <TextView
        android:id="@+id/tvReleaseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="3dp"
        android:text="@string/_2019_08_03"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/ivImagePoster"
        app:layout_constraintTop_toBottomOf="@id/tvRelease" />

    <TextView
        android:id="@+id/tvAverageRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/average_rating"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/ivImagePoster"
        app:layout_constraintTop_toBottomOf="@id/tvReleaseDate" />

    <TextView
        android:id="@+id/tvRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="3dp"
        android:text="@string/_9_2"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/ivImagePoster"
        app:layout_constraintTop_toBottomOf="@id/tvAverageRating" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivChecked"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:src="@drawable/ic_turned"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivStar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:src="@drawable/ic_star"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintTop_toBottomOf="@id/ivChecked" />

    <TextView
        android:id="@+id/tvRateNumber"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="26dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="9.5"
        android:textColor="@color/button_color"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintTop_toBottomOf="@id/ivStar" />


</androidx.constraintlayout.widget.ConstraintLayout>