<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="317dp"
        android:layout_height="0dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/login_to_your_account"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintDimensionRatio="2.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="317dp"
        android:layout_height="48dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="128dp"
        android:background="@drawable/view_background"
        android:hint="@string/username"
        android:paddingLeft="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLogin" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="317dp"
        android:layout_height="48dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/view_background"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etUsername" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="314dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="42dp"
        android:background="@drawable/button_view_background"
        android:text="Login"
        android:textColor="@color/black"
        app:layout_constraintDimensionRatio="6.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:layout_width="317dp"
        android:layout_height="27dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/skip_login"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="140dp"
        android:layout_marginTop="17dp"
        android:id="@+id/tvSkipLogin"/>





</androidx.constraintlayout.widget.ConstraintLayout>